@@ -56,14 +56,18 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-04-27 13:23:05 L.248'38215 T4001720977.K ~36  +----+----+----+----+----+
-     TimeCnt : //z 2015-04-27 11:29:48 L.248'45012 T1419000796.K ~2   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-04-27 11:35:34 L.248'44666 T1420042932.K ~3   +----+----+----+----+----+
+     Zndex_E : //z 2015-04-27 17:37:48 L.248'22932 T578988065 .K ~90  +----+----+----+----+----+
+     TimeCnt : //z 2015-04-27 16:48:05 L.248'25915 T3583709115.K ~3   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~4   +----+----+----+----+----+
+     #4   R+ : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~4     V+.46   L+.132  
      #3   R+ : //z 2015-04-27 11:35:34 L.248'44666 T1420042932.K ~3     V+.29   L+.108  
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-04-27 13:23:05 L.248'38215 T4001720977.K ~39    R+.2    L+.96   --+----+
+     Version : //z 2015-04-27 17:37:48 L.248'22932 T578988065 .K ~94    R+.4    L+.155  --+----+
+     #4   V+ : //z 2015-04-27 16:35:40 L.248'26660 T3582415510.K ~76    R+.4    L+.139  
+     #3   V+ : //z 2015-04-27 16:25:20 L.248'27280 T3581229523.K ~57    R+.4    L+.136  
+     #2   R+ : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~46    R+.4    L+.133  V+.46   
      #2   V+ : //z 2015-04-27 13:22:56 L.248'38224 T4001685206.K ~38    R+.2    L+.95   
      #1   R+ : //z 2015-04-27 11:35:34 L.248'44666 T1420042932.K ~29    R+.3    L+.109  V+.29   
      #1   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~19    R+.2    L+.105  V+.19   
@@ -76,7 +80,7 @@
      K  Vers : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      K   Ver : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      K    Ve : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     K     V : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
+     K     V : //z 2015-04-27 16:35:09 L.248'26691 T3582415387.K ~73    R+.4    L+.148  
      KaizenZ : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
 #endregion //z 2015-04-27 11:28:04 L.248'45116 BG57IV3@XCL T1418964723.K.F4146951713-+----+----+
 
@@ -125,3 +129,28 @@ Week.Kaizen
 　　　　　　　　　　　　　　　　　　　　　　　　 　　　　国务院办公厅
 　　　　　　　　　　　　　　　　　　　　　　　　　　　　2014年12月16日
 #endregion //z 2015-04-27 11:35:34 L.248'44666 BG57IV3@XCL T1420042932.K.F4146951713-+----+----+
+
+#region 04-27 16:23 R#.4    @流程图 软件推荐
+01. 还是选用 visio
+Windows下VISIO最佳，MacOS下OmniGraffle最佳，其他软件也能画，但没这两个做得专业。OmniGraffle在操作上比VISIO更方便一些。
+ProcessOn.com
+OmniGraffle
+draw.io
+smartdraw
+亿图
+Enterprise Architect，我的最爱。做软件设计用的，也可以用来画流程图。
+如果不是要非常专业的，我感觉Edraw Mind Map就够用了，主要它轻量，安装包才十几兆
+
+OmniGraffle 教程
+http://dingyu.me/blog/flowchart-howtos
+
+Office 环境下还是用 Visio 画吧。
+作为 LaTeX 党，我都是用 TikZ 画的。
+
+METAPOST 例子
+http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html
+
+//z 2015-04-27 16:48:05 L.248'25915 T3583709115.K[T3,L153,R4,V80]
+02. 了解下 visio 
+2015-04-27 17:37 todo 阅读《我用VISIO制图》
+#endregion //z 2015-04-27 16:23:21 L.248'27399 BG57IV3@XCL T3581157650.K.F4146951713-+----+----+
